sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:8: error: not found: value exart
      if(ecart==9 | exart==10) {
                    ^